8362598: [macos] Add tests for custom info plist files [v2]